# ai-arena-mcp

./: .dockerignore  .env.production.example  .gitignore  Dockerfile  Dockerfile.web  README.md  content_factory_cli.py  desktop_launcher.py  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
apps/web/: drizzle.config.ts  next.config.mjs
apps/web/app/: _components.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/api/db/query/: route.ts
apps/web/app/api/n8n-templates/[id]/export/: route.ts
apps/web/app/pages/: page.tsx
apps/web/app/pages/[id]/: page.tsx
apps/web/app/pipeline/: page.tsx
apps/web/app/queue/: page.tsx
apps/web/app/settings/: page.tsx  password-input.tsx
apps/web/app/sites/: page.tsx
apps/web/app/sites/[id]/: page.tsx
apps/web/app/sites/new/: page.tsx
apps/web/app/tasks/: page.tsx
apps/web/app/templates/: page.tsx
apps/web/drizzle/: 0000_burly_doomsday.sql  0000_contentpilot_pgvector.sql  0001_contentpilot_schema_alignment.sql  0002_resource_tasks.sql
apps/web/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/web/lib/: actions.ts  data.ts  runtime-settings.ts
apps/web/lib/db/: client.ts  schema.ts
content_factory/: __init__.py  cli.py  db.py
deploy/: Caddyfile
docker/: entrypoint.sh
docs/: content-crawl-workflows.md  content-factory-n8n.md  database-access.md  framework-design.md  n8n-local-dev.md
examples/content-factory/: sample-source.md
gemini_search/: __init__.py  engine.py  providers.py  server.py  web_chat.py
gemini_search/static/: app.js  index.html  style.css
gemini_search_mcp/: __init__.py
google_ai_mode/: engine.py  protocol.py  server.py
outputs/: contentpilot-architecture.layout.json  contentpilot-architecture.pptx  contentpilot-architecture.pptx.inspect.ndjson
scripts/: apply_resource_tasks_migration.py  build_windows.ps1  deploy_ubuntu_docker.sh  import_content_factory_workflows.ps1  import_n8n_workflow_templates_to_postgres.py  index_n8n_workflow_templates.cmd  index_n8n_workflow_templates.py  init_content_factory_db.ps1  init_content_factory_db.py  migrate_sqlite_to_postgres.py  run_backend_console.cmd  run_content_factory_task.cmd  run_n8n.cmd  run_n8n_mcp_http.cmd  run_n8n_mcp_http.ps1  start_n8n_mcp_http.mjs  sync_n8n_workflows_vendor.ps1  uc_google_probe.py  validate_n8n_workflows_with_mcp.mjs  verify_content_factory_e2e.ps1  verify_markitdown_ingestion.ps1  windows_chrome_profile_probe.py
sql/: content_factory_schema.sql
workflows/n8n/: content-crawl-fetch-process-embed.json  content-factory-approval-router.json  content-factory-document-ingestion.json  content-factory-draft-generator.json  content-factory-metrics-feedback.json  content-factory-publisher.json  content-factory-quality-gate.json  content-factory-research-pack.json  content-factory-topic-discovery.json
