[project]
name = "contentpilot"
version = "0.4.0"
description = "Admin console and resource database for website content acquisition workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "mcp[cli]>=1.0",
    "scrapling[all]>=0.3",
    "psycopg[binary]>=3.2",
]

[project.urls]
Homepage = "https://github.com/rainco2008/contentpilot"
MarkItDown = "https://github.com/microsoft/markitdown"
N8nWorkflows = "https://github.com/Zie619/n8n-workflows"

[project.optional-dependencies]
cloakbrowser = [
    "cloakbrowser",
]
content-factory = [
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.6",
]
all = [
    "scrapling[all]>=0.3",
    "cloakbrowser",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.6",
]

[project.scripts]
gemini-search = "gemini_search.server:main"
gemini-search-mcp = "gemini_search_mcp:main"
content-factory = "content_factory.cli:main"
contentpilot = "gemini_search.server:main"
contentpilot-mcp = "gemini_search_mcp:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gemini_search*", "gemini_search_mcp*", "content_factory*"]
